--- a/style/style.css
+++ b/style/style.css
@@ -35,6 +35,7 @@ body{
     color: #c0b283;
     /* background-color: #dcd0c079; */
     border-bottom: 2px solid #c0b283;
+    transition: border-bottom .2s ease;
 }
 .active{
     color: #c0b283;
